src/test-c/test_fail/error/function_as_param.c
int toto(){
    return 0;
}

int mimi(int i){
    return 0;
}

int main(){
    return mimi(toto);
}